# rte_opcua_example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
demo/: CMakeLists.txt
demo/include/: nodeset.h  nodeset_generated.h  nodeset_generated_encoding_binary.h  nodeset_generated_handling.h  nodeset_ids.h  trafo.h  trafoTypes.h
demo/model/: demo.ovm
demo/nodeset/: nodeset.bsd  nodeset.csv  nodeset.tt2pro  nodeset.ua  nodeset.xml  nodeset.xsd
demo/source/: interface.c  interfaceTypes.c  nodeset.c  nodeset_generated.c  trafo.c  trafoTypes.c
doc/: Demo.fbd  DemoTypes.fbd
opcuaExample/: CMakeLists.txt
opcuaExample/include/: demoTrafo.h
opcuaExample/model/: opcuaExample.ovm
opcuaExample/source/: customInterface.c  demoTrafo.c
template/: interface.c  template.ovm  trafo.c  trafo.h
